# pixel-alchemy

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  MakeFile  Makefile  README.md  docker-compose.yml  manage.py  mypy.ini  pyproject.toml
.github/workflows/: deploy-docker-image.yml
ModelLog/: admin.py  apps.py  urls.py  utils.py  views.py
ModelLog/migrations/: 0001_initial.py  0002_initial.py
ModelLog/models/: __init__.py  history.py  operation.py
ModelLog/models/ml/: __init__.py  neural_style_transfer.py
ModelLog/models/ml/image_super_resolution/: __init__.py
ModelLog/models/ml/image_super_resolution/datasets/div2k/: loader.py  parameters.py
ModelLog/models/ml/image_super_resolution/models/: pretrained.py  srgan.py  srresnet.py
ModelLog/models/ml/image_super_resolution/utils/: __init__.py  callbacks.py  config.py  dataset_mappings.py  metrics.py  normalization.py  prediction.py
PixelAlchemy/: asgi.py  settings.py  urls.py  wsgi.py
accounts/: admin.py  permissions.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
accounts/models/: __init__.py  token.py  user.py
accounts/serializers/: user.py
scripts/: dockerized-core-run.sh
store/: admin.py  urls.py
store/migrations/: 0001_initial.py
store/models/: __init__.py  comment.py  image.py  like.py  tag.py
store/serializers/: __init__.py  comment.py  image.py  like.py  tag.py
store/views/: __init__.py  comment.py  image.py  like.py  tag.py
